crates/plotnik-tests/tests/02-parser/recovery_validation/capture_name_camel_case.txt
Q = (a) @fooBar
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:9
  |
1 | Q = (a) @fooBar
  |         ^^^^^^^
  |
help: use `@foo_bar`
  |
1 - Q = (a) @fooBar
1 + Q = (a) @foo_bar
  |
help: capture names become result field names
